--- a/app/src/main/res/drawable/signinroundbutton.xml
+++ b/app/src/main/res/drawable/signinroundbutton.xml
@@ -4,4 +4,7 @@
 
     <solid android:color="@color/login"/>
     <corners android:radius="15dp"/>
+    <stroke
+        android:width="3dp"
+        android:color="#ffffff" />
 </shape>
