--- a/app/src/main/res/drawable/signuproundbutton.xml
+++ b/app/src/main/res/drawable/signuproundbutton.xml
@@ -3,6 +3,9 @@
     android:shape="rectangle">
 
     <solid android:color="@color/signup"/>
-    <corners android:radius="15dp"/>
+    <corners android:radius="15dp" />
+    <stroke
+        android:width="3dp"
+        android:color="#ffffff" />
 
 </shape>
