--- a/app/src/main/res/layout/activity_insect_scan_input.xml
+++ b/app/src/main/res/layout/activity_insect_scan_input.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffff"
+    android:background="@drawable/bluebackground"
     tools:context=".InsectScanInput">
-
-    <Button
-        android:id="@+id/button27"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_alignParentTop="true"
-        android:background="#86e2e9"
-        android:layout_alignParentLeft="true" />
 
     <ImageView
         android:id="@+id/imageView15"
         android:layout_width="200dp"
-        android:layout_height="120dp"
+        android:layout_height="145dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginLeft="92dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="92dp"
+        android:layout_marginRight="92dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar4"
         app:srcCompat="@drawable/honeybee" />
 
     <Button
@@ -30,13 +29,21 @@
         android:layout_height="56dp"
         android:layout_alignLeft="@+id/imageView15"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="99dp"
-        android:layout_marginBottom="231dp"
-        android:background="#1b9af7"
+        android:layout_marginStart="38dp"
+        android:layout_marginLeft="38dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="29dp"
+        android:layout_marginRight="29dp"
+        android:layout_marginBottom="145dp"
+        android:background="@drawable/signinroundbutton"
         android:text="Scan Insect"
         android:textColor="#ffff"
         android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/imageView21"
+        app:layout_constraintEnd_toStartOf="@+id/button29"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15" />
 
     <Button
         android:id="@+id/button29"
@@ -44,23 +51,41 @@
         android:layout_height="56dp"
         android:layout_alignTop="@+id/scanInsectButton"
         android:layout_alignRight="@+id/imageView15"
-        android:layout_marginTop="1dp"
-        android:layout_marginRight="107dp"
-        android:background="#1b9af7"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginBottom="145dp"
+        android:background="@drawable/signinroundbutton"
         android:text="Upload Image"
         android:textColor="#ffff"
         android:textSize="15dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/imageView21"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView15" />
 
     <ImageView
         android:id="@+id/imageView21"
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:layout_alignParentBottom="true"
-        app:srcCompat="@drawable/medicalbackground"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="0dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/medicalbackground" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar4"
+        android:layout_width="386dp"
+        android:layout_height="wrap_content"
+        android:background="#86e2e9"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
