--- a/app/src/main/res/layout/activity_insect_species_list.xml
+++ b/app/src/main/res/layout/activity_insect_species_list.xml
@@ -1,128 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fillViewport="true"
-    android:background="#FFFFFF">
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffff"
     tools:context=".InsectSpeciesList">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar6"
+        android:layout_width="389dp"
+        android:layout_height="wrap_content"
+        android:background="#86e2e9"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="403dp"
+        android:layout_height="583dp"
+        tools:layout_editor_absoluteX="-6dp"
+        tools:layout_editor_absoluteY="-7dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
+    <TextView
+        android:id="@+id/textView28"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ANTS"
+        android:textColor="#ffff"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="163dp"
+        tools:layout_editor_absoluteY="16dp" />
+
     <Button
-        android:id="@+id/button34"
-        android:layout_width="383dp"
-        android:layout_height="61dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="1dp"
-        android:layout_marginLeft="1dp"
+        android:id="@+id/button2"
+        android:layout_width="386dp"
+        android:layout_height="83dp"
         android:background="#fdf6f6"
         android:text="Black House Ant"
+        android:textColor="#000"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar6" />
 
     <Button
-        android:id="@+id/button36"
-        android:layout_width="383dp"
-        android:layout_height="61dp"
-        android:layout_below="@+id/view2"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
+        android:id="@+id/button3"
+        android:layout_width="386dp"
+        android:layout_height="83dp"
         android:background="#fdf6f6"
         android:text="Fire Ant"
+        android:textColor="#000"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button34" />
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
-        android:id="@+id/button37"
-        android:layout_width="383dp"
-        android:layout_height="61dp"
-        android:layout_below="@+id/view3"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
+        android:id="@+id/button4"
+        android:layout_width="386dp"
+        android:layout_height="83dp"
         android:background="#fdf6f6"
         android:text="Ghost Ant"
+        android:textColor="#000"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button36" />
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
 
     <Button
-        android:id="@+id/button38"
-        android:layout_width="383dp"
-        android:layout_height="61dp"
-        android:layout_below="@+id/view4"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
+        android:id="@+id/button5"
+        android:layout_width="386dp"
+        android:layout_height="83dp"
         android:background="#fdf6f6"
         android:text="Odorous House Ant"
+        android:textColor="#000"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button37" />
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
 
     <Button
-        android:id="@+id/button42"
-        android:layout_width="383dp"
-        android:layout_height="61dp"
-        android:layout_below="@+id/view5"
-        android:layout_marginEnd="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_marginBottom="150dp"
+        android:id="@+id/button6"
+        android:layout_width="386dp"
+        android:layout_height="83dp"
         android:background="#fdf6f6"
         android:text="Pharaoh's Ant"
+        android:textColor="#000"
+        android:textSize="15dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button5" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="386dp"
+        android:layout_height="90dp"
+        android:layout_marginBottom="6dp"
+        android:background="#fdf6f6"
+        android:text="Red Wood Ant"
+        android:textColor="#000"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button38" />
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
-    <Button
-        android:id="@+id/button47"
-        android:layout_width="26dp"
-        android:layout_height="33dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:background="@android:color/transparent"
-        android:text=">"
-        android:textSize="15dp"
-        tools:layout_editor_absoluteY="10dp" />
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="388dp"
-        android:layout_height="56dp"
-        android:background="#86e2e9"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:text="ANTS"
-        android:textColor="#ffff"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button34"
-        tools:layout_editor_absoluteX="159dp" />
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
-</ScrollView>
