--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,19 +19,6 @@
         android:layout_marginRight="98dp"
         app:srcCompat="@drawable/byteme" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="210dp"
-        android:fontFamily="cursive"
-        android:text="SIGN IN"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
-
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="22dp"
@@ -92,7 +79,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="94dp"
         android:background="@drawable/signinroundbutton"
-        android:text="Sign In"
+        android:text="Login"
         android:textColor="#ffff" />
 
     <TextView
