--- a/app/src/main/res/layout/activity_scan_mode_form.xml
+++ b/app/src/main/res/layout/activity_scan_mode_form.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,86 +7,91 @@
     android:background="@drawable/bluebackground"
     tools:context=".ScanModeForm">
 
-    <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="283dp"
-        android:layout_height="227dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="114dp"
-        app:srcCompat="@drawable/bee" />
-
-    <Button
-        android:id="@+id/button17"
-        android:layout_width="268dp"
-        android:layout_height="368dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="101dp"
-        android:alpha="0.75"
-        android:background="@drawable/dashboard"
-        android:textSize="30sp" />
-
     <Button
         android:id="@+id/byBiteButton"
         android:layout_width="244dp"
-        android:layout_height="111dp"
-        android:layout_alignBottom="@+id/imageView13"
+        android:layout_height="82dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="73dp"
-        android:layout_marginLeft="73dp"
-        android:layout_marginBottom="122dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginRight="70dp"
         android:background="@drawable/signinroundbutton"
         android:text="By Bite"
         android:textColor="#ffff"
         android:textSize="36sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar17" />
 
     <Button
         android:id="@+id/byInsectButton"
-        android:layout_width="243dp"
-        android:layout_height="102dp"
+        android:layout_width="244dp"
+        android:layout_height="82dp"
+        android:layout_alignStart="@+id/byBiteButton"
+        android:layout_alignLeft="@+id/byBiteButton"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="184dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginRight="70dp"
         android:background="@drawable/signinroundbutton"
         android:text="By Insect"
         android:textColor="#ffff"
         android:textSize="36sp"
         android:textStyle="bold"
-        android:layout_alignLeft="@+id/byBiteButton"
-        android:layout_marginLeft="1dp"
-        android:layout_alignStart="@+id/byBiteButton"
-        android:layout_marginStart="1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/byBiteButton" />
 
     <Button
         android:id="@+id/backButton"
-        android:layout_width="234dp"
-        android:layout_height="105dp"
+        android:layout_width="244dp"
+        android:layout_height="82dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="78dp"
-        android:layout_marginBottom="71dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginBottom="112dp"
         android:background="@drawable/submit"
         android:text="Back"
         android:textColor="#ffff"
         android:textSize="36sp"
         android:textStyle="bold"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="78dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/byInsectButton" />
 
-    <Button
-        android:id="@+id/button23"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="#31d3e2"
-        android:text="Scan Mode"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar17"
+        android:layout_width="395dp"
+        android:layout_height="wrap_content"
+        android:background="#86e2e9"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView38"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:text="Scode Mode"
+        android:textColor="#ffffff"
         android:textSize="25dp"
-        android:textColor="#ffff"
         android:textStyle="bold"
-        android:layout_alignParentLeft="true" />
+        tools:layout_editor_absoluteX="122dp"
+        tools:layout_editor_absoluteY="16dp" />
 
-</RelativeLayout>
+
+</android.support.constraint.ConstraintLayout>
