--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,19 +16,6 @@
         android:layout_marginTop="16dp"
         app:srcCompat="@drawable/byteme" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="92dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="183dp"
-        android:fontFamily="cursive"
-        android:text="SIGN UP"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
-
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="26dp"
@@ -141,7 +128,7 @@
         android:layout_marginEnd="68dp"
         android:layout_marginRight="68dp"
         android:background="@android:color/transparent"
-        android:text="Sign In"
+        android:text="Login"
         android:textColor="#1b9af7" />
 
 </RelativeLayout>
