--- a/app/src/main/res/layout/activity_insect_scan.xml
+++ b/app/src/main/res/layout/activity_insect_scan.xml
@@ -8,4 +8,31 @@
     tools:context=".InsectScan">
 
 
+    <TextView
+        android:id="@+id/textView33"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="62dp"
+        android:layout_marginLeft="62dp"
+        android:layout_marginTop="54dp"
+        android:text="Result:"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView33"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="62dp"
+        android:layout_marginLeft="62dp"
+        android:layout_marginTop="36dp"
+        android:text="---"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
 </RelativeLayout>
